# ui_auto_new

./: .gitignore  README.md  pyproject.toml
backend/: .env  BROWSER_CONFIG.md  README.md  check_execution.py  check_task_status.py  debug_allure_enum.py  pyproject.toml  reproduce_issue.py  test_ws.py  verify_api.py  verify_backend_8003.py  verify_port_8000.py
backend/alembic/: env.py
backend/alembic/versions/: 49c2b084f178_add_audit_fields.py  (+5 more)
backend/allure-results/: 01b08c8a-999c-416b-a046-a01aee18ed4c-result.json  09f59dfd-b905-4fc5-9a33-d2ed08ebd00c-result.json  0c81e562-8e7f-4666-8608-1ae34aa5f83b-result.json  32bc09f0-d98f-470c-9507-9ffcc83860a4-result.json  4a027999-66ff-4d64-a4e8-3fc282723814-result.json  4e989666-90ce-4570-a9b8-c34a2111a502-result.json  62a8044b-4bd1-4833-ab14-80d982b98947-result.json  75462780-e92c-46fc-b087-d4a748c280b1-result.json  7f8b1b02-3278-456d-ab8d-f16f3cab0bd9-result.json  9c5419a6-5157-4a64-b3c1-f55dd897ed1d-result.json  9f64f04c-be44-4f0b-9351-512b827a09e0-result.json  b34d444e-1953-492c-a124-6ad58ee79785-result.json  b7eee6dd-c0fc-4ab3-a003-c012922b0ca4-result.json  bb9743d1-be2c-4cd8-8093-fa5ae335f406-result.json  c42bba2b-5f89-4b83-80cf-2c69fcfb1798-result.json  cd47f9ff-b9cf-4314-b422-96d3d9aaa387-result.json  e637faee-5e44-4a4f-ada7-00e3fc6d4221-result.json  e868059e-c7c4-4981-88f1-e15bb3eb57b5-result.json  ef8ae4b2-114a-49da-8ac5-c5babe956a84-result.json  f5db2787-ecd9-40cc-8d50-8e6cc9a33426-result.json
backend/app/: initial_data.py  main.py  pre_start.py  reset_db.py  worker.py
backend/tests/: test_locator_stability.py
(+209 files in other folders)
